--- a/_posts/2025-04-23-cm-basics.md
+++ b/_posts/2025-04-23-cm-basics.md
@@ -58,6 +58,7 @@ Now within SQLcl if we want to connect with that defined connection we can do so
 ```sql
 SQL> conn -name tom
 Connected.
+SQL>
 ```
 
 Even better, you can use the ```-name``` flag when launching SQLcl to connect directly using this saved connection.
@@ -83,6 +84,7 @@ How do we modify details about the connection?  Let's update the password.
 SQL> alter user tom identified by tommy;
 
 User TOM altered.
+SQL>
 ```
 
 To update the saved connection, we use the ```-save``` and ```-savepwd``` flags for the ```conn``` command, but use the ```-replace``` command to overwrite the connection with the new details.
@@ -97,6 +99,7 @@ SQL> cm list
 .
 ├── tom
 └── tom
+SQL>
 ```
 Unfortunately there is currently a bug where the -replace flag doesn't work, so we end up with two connections.
 Fortunately, a new command allows us to delete connections, so to finish off let's delete them (both).
@@ -111,4 +114,5 @@ SQL> cm delete -conn tom
 Connection tom has been deleted
 SQL> cm list
 .
+SQL>
 ```
