--- a/_posts/2025-05-05-synonyms.md
+++ b/_posts/2025-05-05-synonyms.md
@@ -6,89 +6,84 @@ tags: oracle
 published: false
 ---
 
-Setting up a new environment I encounted some unexpected behaviour with regards to Oracle handling of synonyms.  Let me demonstrate the behviour that I encountered first.
+While setting up a new environment, I learned something new regarding how Oracle handles synonyms. First, I will demonstrate the behaviour I encountered.
 
 ```sql
 SQL> show user
-
 USER is "PDBADMIN"
 
-SQL> create public synonym t1 for pdbadmin.t1;
+SQL> CREATE PUBLIC SYNONYM alpha FOR pdbadmin.alpha;
 
-Synonym T1 created.
+SYNONYM ALPHA created.
 
-SQL> create public synonym s2 for pdbadmin.t2;
+SQL> CREATE PUBLIC SYNONYM gamma FOR pdbadmin.beta;
 
-Synonym S2 created.
+SYNONYM GAMMA created.
 
-SQL> select * from dba_synonyms where synonym_name in ('T1', 'S2');
+SQL> SELECT * FROM dba_synonyms WHERE synonym_name IN ('ALPHA', 'GAMMA');
 
 OWNER     SYNONYM_NAME    TABLE_OWNER    TABLE_NAME    DB_LINK       ORIGIN_CON_ID 
 _________ _______________ ______________ _____________ __________ ________________ 
-PUBLIC    T1              PDBADMIN       T1                                      3 
-PUBLIC    S2              PDBADMIN       T2                                      3 
+PUBLIC    GAMMA           PDBADMIN       BETA                                    3 
+PUBLIC    ALPHA           PDBADMIN       ALPHA                                   3 
 
-SQL> select * from t1;
+SQL> SELECT * FROM pdbadmin.alpha;
 
-SQL Error: ORA-01775: synonym T1 resolves to itself due to circular translation
+SQL Error: ORA-00942: table or view "PDBADMIN"."ALPHA" does not exist
 
-SQL> select * from s2;
+SQL> SELECT * FROM pdbadmin.beta;
+
+SQL Error: ORA-00942: table or view "PDBADMIN"."BETA" does not exist
+
+SQL> SELECT * FROM alpha;
+
+SQL Error: ORA-01775: synonym ALPHA resolves to itself due to circular translation
+
+SQL> SELECT * FROM gamma;
 
 SQL Error: ORA-00980: synonym translation is no longer valid
+
+SQL> 
+
 ```
 
-So I have a global synonym called which points to a table called my_table in the pdbadmin. However I have omited to create the actual table pdbamin.my_table.
-When I try to reference the table via the public syonym, I get an ora-01775 error, a recursive synonym path.
-Of course this can be resolved by properly creating my_table, but let's look further:
+We create global synonyms called ALPHA and GAMMA, which point, respectively, to the qualified objects PDBADMIN.ALPHA and PDBADMIN.BETA, neither of which exists.
+When I reference ALPHA, I get ORA-01775, which indicates that there is a loop in the resolution of the synonym.
+When I reference GAMMA, I get ORA-00980, which indicates that the synonym translation is invalid.
+
+My confusion was that, since the public synonym ALPHA points to the fully qualified object PDBADMIN.ALPHA, how can it resolve to itself and create a circular reference?
+
+What I learned was that, unlike what happens when a non-existent object is referenced using a fully qualified name directly—where it simply fails to resolve—if that name also happens to be a public synonym, Oracle resolves it using the public synonym.
 
 ```sql
-SQL> select * from dba_synonyms where synonym_name = 'MY_TABLE';
+SQL> CREATE TABLE delta AS SELECT * FROM dual;
+
+Table DELTA created.
+
+SQL> CREATE PUBLIC SYNONYM epsilon FOR pdbadmin.delta;
+
+SYNONYM EPSILON created.
+
+SQL> CREATE PUBLIC SYNONYM zeta FOR pdbadmin.epsilon;
+
+SYNONYM ZETA created.
+
+SQL> SELECT * FROM dba_synonyms WHERE synonym_name IN ('EPSILON', 'ZETA');
 
 OWNER     SYNONYM_NAME    TABLE_OWNER    TABLE_NAME    DB_LINK       ORIGIN_CON_ID 
 _________ _______________ ______________ _____________ __________ ________________ 
-PUBLIC    MY_TABLE        PDBADMIN       MY_TABLE                                3 
+PUBLIC    EPSILON         PDBADMIN       DELTA                                   3 
+PUBLIC    ZETA            PDBADMIN       EPSILON                                 3 
 
-SQL> select * from pdbadmin.my_table;
+SQL> SELECT * FROM pdbadmin.epsilon;
 
-SQL Error: ORA-00942: table or view "PDBADMIN"."MY_TABLE" does not exist
-```
+SQL Error: ORA-00942: table or view "PDBADMIN"."EPSILON" does not exist
 
-However I've now learned (thanks Neil) that synonym resolution doesn't work that way.
-
-```sql
-SQL> create table t as select * from dual;
-
-Table T created.
-
-SQL> create table t as select * from dual;
-
-Table T created.
-
-SQL> create public synonym s1 for pdbadmin.t;
-
-Synonym S1 created.
-
-SQL> create public synonym s2 for pdbadmin.s1;
-
-Synonym S2 created.
-
-SQL> select * from dba_synonyms where synonym_name in ('S1', 'S2');
-
-OWNER     SYNONYM_NAME    TABLE_OWNER    TABLE_NAME    DB_LINK       ORIGIN_CON_ID 
-_________ _______________ ______________ _____________ __________ ________________ 
-PUBLIC    S1              PDBADMIN       T                                       3 
-PUBLIC    S2              PDBADMIN       S1                                      3 
-
-SQL> select * from pdbadmin.s1;
-
-SQL Error: ORA-00942: table or view "PDBADMIN"."S1" does not exist
-
-SQL> select * from s2;
+SQL> SELECT * FROM zeta;
 
 DUMMY    
 ________ 
 X        
 ```
 
-Even though pdbadmin.s1 doesn't resolve when we reference it directly, when the synonym s1 is being resolved, the database appears to first check if the fully qualified object exists, it allows it to be resolved by the public synyonm.
-
+Thanks to [Neil Chandler](https://chandlerdba.com/) for pointing this out to me.
