add private synonym

--- a/_posts/2025-05-05-synonyms.md
+++ b/_posts/2025-05-05-synonyms.md
@@ -52,7 +52,7 @@ When I reference GAMMA, I get ORA-00980, which indicates that the synonym transl
 
 My confusion was that, since the public synonym ALPHA points to the fully qualified object PDBADMIN.ALPHA, how can it resolve to itself and create a circular reference?
 
-What I learned was that, unlike what happens when a non-existent object is referenced using a fully qualified name directly—where it simply fails to resolve—if that name also happens to be a public synonym, Oracle resolves it using the public synonym.
+What I learned was that, while a fully qualified reference to a non-existent object normally fails to resolve—even if a public synonym exists—Oracle will, when resolving a synonym (public or not), also resolve it using a public synonym.
 
 ```sql
 SQL> CREATE TABLE delta AS SELECT * FROM dual;
@@ -67,12 +67,17 @@ SQL> CREATE PUBLIC SYNONYM zeta FOR pdbadmin.epsilon;
 
 SYNONYM ZETA created.
 
-SQL> SELECT * FROM dba_synonyms WHERE synonym_name IN ('EPSILON', 'ZETA');
+SQL> create synonym eta for pdbadmin.epsilon;
 
-OWNER     SYNONYM_NAME    TABLE_OWNER    TABLE_NAME    DB_LINK       ORIGIN_CON_ID 
-_________ _______________ ______________ _____________ __________ ________________ 
-PUBLIC    EPSILON         PDBADMIN       DELTA                                   3 
-PUBLIC    ZETA            PDBADMIN       EPSILON                                 3 
+Synonym ETA created.
+
+SQL> SELECT * FROM dba_synonyms WHERE synonym_name IN ('EPSILON', 'ZETA', 'ETA');
+
+OWNER       SYNONYM_NAME    TABLE_OWNER    TABLE_NAME    DB_LINK       ORIGIN_CON_ID 
+___________ _______________ ______________ _____________ __________ ________________ 
+PUBLIC      EPSILON         PDBADMIN       DELTA                                   3 
+PUBLIC      ZETA            PDBADMIN       EPSILON                                 3 
+PDBADMIN    ETA             PDBADMIN       EPSILON                                 3 
 
 SQL> SELECT * FROM pdbadmin.epsilon;
 
@@ -83,6 +88,12 @@ SQL> SELECT * FROM zeta;
 DUMMY    
 ________ 
 X        
+
+SQL> SELECT * FROM eta;
+
+DUMMY    
+________ 
+X        
 ```
 
-Thanks to [Neil Chandler](https://chandlerdba.com/) for pointing this out to me.
+Thanks to [Neil Chandler](https://chandlerdba.com/) for pointing me in the right direction on this.
