--- a/_posts/2025-04-23-cm-basics.md
+++ b/_posts/2025-04-23-cm-basics.md
@@ -1,5 +1,5 @@
 ---
-title: "SQLcl Connection Manager - The Basics"
+title: "SQLcl - Connection Manager - Basics"
 date: 2025-04-23
 layout: post
 tags: sqlcl oracle
